[gd_scene load_steps=3 format=1]

[ext_resource path="res://HUD/HUD_scene.gd" type="Script" id=1]
[ext_resource path="res://HUD/chintzy.fnt" type="BitmapFont" id=2]

[node name="HUD_root" type="Node"]

script/script = ExtResource( 1 )

[node name="label_score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 90.0
margin/top = 126.0
margin/right = 757.0
margin/bottom = 201.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.118423, 0.777344, 0.236823, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_menu" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 76.0
margin/top = 626.0
margin/right = 993.0
margin/bottom = 1143.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.705882, 0, 1 )
text = "Space Blaster 84

Let's make a game

Tutorial series with

the Godot Game Engine.

Press Enter to Start!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_gameOver" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 127.0
margin/top = 512.0
margin/right = 977.0
margin/bottom = 1219.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.705882, 0, 1 )
text = "GAME OVER

You have a

HIGH SCORE!

000000


Press Enter

to PLAY AGAIN!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


